--- a/department-service.properties
+++ b/department-service.properties
@@ -6,5 +6,6 @@ spring.datasource.password=vicky
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 
