--- a/department-service.properties
+++ b/department-service.properties
@@ -8,4 +8,6 @@ spring.jpa.show-sql: true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+spring.boot.message=Hello, Department Service.
+
 
