--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,4 +9,4 @@ spring.jpa.show-sql: true
 server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Hello, Employee Service
+spring.boot.message=Hello, Employee Service Spring Cloud Bus Demo
