--- a/ORGANIZATION-SERVICE.properties
+++ b/ORGANIZATION-SERVICE.properties
@@ -1,9 +1,21 @@
-spring.jpa.hibernate.ddl-auto=update
+# ===============================
+# Database Configuration
+# ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/organization_db
 spring.datasource.username=root
 spring.datasource.password=vicky
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ===============================
+# Server
+# ===============================
 server.port=8083
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+# ===============================
+# Eureka
+# ===============================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
